[package]
name = "bandit-sims"
version = "0.1.0"
authors = ["Clement Lee <2158058+clementlee@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
rand = "0.8"
rand_distr = "0.4"
rayon = "1.5"
